objects/Course_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Course_Catalog_Description__c</fullName>
        <description>Course Catalog Description</description>
        <label>Course Catalog Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Catalog_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Course Catalog Status</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Catalog_Description__c</columns>
        <columns>Course_Catalog_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Catalogs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>